implement /tms-auth endpoint
