# backend/swagger.json
@@ -16,7 +16,7 @@
     }
   },
   "paths": {
-    "/orders/": {
+    "/api/orders/": {
       "get": {
         "responses": {
           "200": {
@@ -64,7 +64,7 @@
         }
       }
     },
-    "/orders/{id}": {
+    "/api/orders/{id}": {
       "patch": {
         "parameters": [
           {
@@ -134,6 +134,54 @@
             "description": "order not found.",
             "schema": {
               "$ref": "#/definitions/SingleMessage"
+            }
+          },
+          "500": {
+            "description": "Internal server error.",
+            "schema": {
+              "$ref": "#/definitions/SingleMessage"
+            }
+          }
+        }
+      }
+    },
+    "/api/tms-auth/": {
+      "get": {
+        "responses": {
+          "200": {
+            "schema": {
+              "$ref": "#/definitions/TmsAuth"
+            }
+          },
+          "500": {
+            "description": "Internal server error.",
+            "schema": {
+              "$ref": "#/definitions/SingleMessage"
+            }
+          }
+        }
+      },
+      "patch": {
+        "parameters": [
+          {
+            "name": "obj",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/TmsAuth"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "order created successfully.",
+            "schema": {
+              "$ref": "#/definitions/TmsAuth"
+            }
+          },
+          "400": {
+            "description": "Bad request.",
+            "schema": {
+              "$ref": "#/definitions/BadRequestError"
             }
           },
           "500": {
@@ -300,6 +348,35 @@
             "type": "string",
             "example": "string"
           }
+        }
+      }
+    },
+    "TmsAuth": {
+      "type": "object",
+      "properties": {
+        "_id": {
+          "type": "string",
+          "example": "string"
+        },
+        "xsrfToken": {
+          "type": "string",
+          "example": "RSDC"
+        },
+        "_aid": {
+          "type": "string",
+          "example": "string"
+        },
+        "_rid": {
+          "type": "string",
+          "example": "1200"
+        },
+        "createdAt": {
+          "type": "string",
+          "example": "string"
+        },
+        "updatedAt": {
+          "type": "string",
+          "example": "string"
         }
       }
     }
